# extract_clash_profile

./: Cargo.toml  README.md  clash_static_config.yaml  rules
src/: main.rs
