[package]
name = "clash_profile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "*", features = ["client", "http1", "http2", "stream"] }
hyper-tls = "*"
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
base64 = "*"
regex = "*"
urlencoding = "*"
lazy_static = "*"
serde_json = "*"
serde = { version = "*", features = ["derive"] }
dotenv = "0.15.0"
